--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+body
+{
+  font-family: "Roboto Condensed" sans-serif;
+}
+/*-----------------------------NavBar------------------*/
+.logo
+{
+  width: 10.25rem;
+  height: 4rem;
+}
+:root
+{
+  --primary-white: #fff;
+}
+/*----------------MENU Links---------------------------------*/
+nav a.nav-link
+{
+  font-weight: 500;
+  letter-spacing: 0.0375rem;
+  cursor: pointer;
+}
+nav ul li{
+  text-transform: uppercase;
+}
+.navbar-nav > li > a
+{
+  color: var(--primary-white) !important;
+  border-bottom: solid transparent 3px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar-nav > li > a:focus
+{
+  border-bottom: solid yellow 3px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-nav > li > a:hover
+{
+  border-bottom: solid yellow 3px;
 }
