--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
 body
 {
-  font-family: "Roboto Condensed" sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 /*-----------------------------NavBar------------------*/
+nav
+{
+  z-index: 2;
+}
 .logo
 {
   width: 10.25rem;
@@ -33,3 +37,83 @@ nav ul li{
 {
   border-bottom: solid yellow 3px;
 }
+/*-----------------------------Header------------------*/
+.header_wraper
+{
+  position: relative;
+  background-image:linear-gradient(
+    rgba(39, 36, 36, 0.45), 
+    rgba(133, 129, 129, 0.45)
+  ), url("./240_F_419893950_XY2aVUT5S5cPObSXOWFpBMi8da9jtMfH.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+.main_info
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight:bolder;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+.main_info h1
+{
+  text-transform: uppercase;
+  color: orange;
+}
+@media (max-width: 600px) {
+  .main_info h1{
+    font-size: 1.5rem !important;
+  }
+}
+
+.typed-text
+{
+  font-size: 2rem;
+  color: white;
+}
+@media (max-width: 600px){
+  .typed-text{
+    font-size: 1.5rem;
+  }
+}
+/*------------------------------------HEADER MAIN OFFER BUTTON-----------------*/
+.btn-main-offer
+{
+  border: solid red 1px;
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 0.65rem 0.75rem 0.75rem 0.75rem;
+  color: white;
+  margin: 2rem;
+}
+.btn-main-offer:hover
+{
+  text-decoration: none;
+  background-color: rgb(252, 102, 102);
+  color: white;
+  transition: .2s ease-in-out;
+}
+.tsparticles-canvas-el
+{
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+}
+
+@media (max-width: 600px) {
+  .tsparticles-canvas-el{
+    display: none;
+  }
+ }
