--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 body
 {
   font-family: "Roboto Condensed", sans-serif;
@@ -7,6 +8,7 @@ body
 nav
 {
   z-index: 2;
+  width: 100vw;
 }
 .logo
 {
@@ -49,6 +51,7 @@ nav ul li{
   background-size: cover;
   background-position: center;
   height: 90vh;
+  width: 100vw;
 }
 .main_info
 {
@@ -71,7 +74,7 @@ nav ul li{
   text-transform: uppercase;
   color: orange;
 }
-@media (max-width: 600px) {
+@media (max-width: 900px) {
   .main_info h1{
     font-size: 1.5rem !important;
   }
@@ -82,9 +85,9 @@ nav ul li{
   font-size: 2rem;
   color: white;
 }
-@media (max-width: 600px){
+@media (max-width: 900px){
   .typed-text{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
 }
 /*------------------------------------HEADER MAIN OFFER BUTTON-----------------*/
@@ -116,4 +119,82 @@ nav ul li{
   .tsparticles-canvas-el{
     display: none;
   }
+ }
+ /*---------------------------About Me-----------------------*/
+ .about_me
+ {
+   height: 100vh;
+   position: relative;
+   width: 100vw;
+ }
+ .about_me_info
+ {
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+ }
+ .about_me_info>.my_intro
+ {
+   width: 400px;
+   margin-left: 50px;
+   font-family: 'Merriweather', serif;
+   text-align: justify;
+ }
+ .about_me_info>.my_intro h2
+ {
+   color: #28A745;
+   font-family: 'Merriweather', serif;
+   font-size: 30px;
+ }
+ .about_me_info>.my_intro b
+ {
+   color: #F50057;
+ }
+ .about_me_info>.my_image img
+ {
+   border-radius: 50%;
+ }
+
+ @media(max-width: 886px){
+  .about_me_info{
+    flex-direction: column;
+  } 
+ }
+ @media(max-width: 600px){
+  .about_me_info>.my_intro h2{
+    font-size: 25px;
+  } 
+ }
+ @media(max-width: 500px){
+  .about_me_info>.my_intro p{
+    font-size: 15px;
+  } 
+ }
+
+ .my_media_icons
+ {
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   bottom: 0;
+   left: 0;
+   right: 0;
+ }
+ /*------------------------------------Skills--------------------------------------*/
+ .skills
+ {
+   height: 100vh;
+   width: 100vw;
+   border: solid black 1px;
+ }
+ .percnt
+ {
+   width: 100px;
+   height: 100px;
  }
